<resources>
    <string name="app_name">Lost And Found</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_historic">Historic</string>
    <string name="action_logout">Logout</string>

    <string name="image_desc">Image of the lost item</string>
    <string name="at">At: </string>
    <string name="shortDesc">short description: </string>
    <string name="foundAt">Found near: </string>
    <string name="lostAt">Lost near: </string>
    <string name="reward">Reward: </string>
    <string name="comment">Comment: </string>
    <string name="category">Category: </string>
    <string name="select">select</string>
</resources>
